--- a/_i18n/en/_posts/2019-11-17-人才不是流失-而是循環.md
+++ b/_i18n/en/_posts/2019-11-17-人才不是流失-而是循環.md
@@ -11,7 +11,7 @@
 
 🛰 This April, the Talent Circulation Alliance (TCA), jointly sponsored by the American Institute in Taiwan (AIT), the Ministry of Economic Affairs and the Ministry of Economic Affairs, was officially established.
 
-💡 My office (Public Digital Innovation Space, PDIS) was also invited to provide technical services for the online public consultation conducted by TCA. Similar to the Digital Dialogue series jointly organized by AIT and the Ministry of Foreign Affairs, the pol.is system has been used to construct a dialogue platform (website: [tca.talksto.tw](https://tca.talksto.tw)) to enable participants interested in this topic to express opinions and brainstorm ideas.
+💡 My office (Public Digital Innovation Space, PDIS) was also invited to provide technical services for the online public consultation conducted by TCA. Similar to the Digital Dialogue series jointly organized by AIT and the Ministry of Foreign Affairs, the pol.is system has been used to construct a dialogue platform (📲website: [tca.talksto.tw](https://tca.talksto.tw)) to enable participants interested in this topic to express opinions and brainstorm ideas.
 
 🔄 Brain drain is regarded by many people as a serious national issue. Yet, when we consider the example of Morris Chang, founder of TSMC, we can see that as long as a conducive environment and system exist, talents do not just flow in one direction but rather in circulation.
 
