--- a/_i18n/zh-TW/_posts/2019-11-17-人才不是流失-而是循環.md
+++ b/_i18n/zh-TW/_posts/2019-11-17-人才不是流失-而是循環.md
@@ -11,7 +11,7 @@ tags:
 
 🛰 今年四月，由美國在台協會（AIT）、經濟部工業局、資策會等單位共同發起的「人才循環大聯盟（Talent Circulation Alliance, TCA）」正式成立。
 
-💡 我的辦公室（行政院公共數位創新空間，PDIS）也受邀為 TCA 舉辦的線上公眾諮詢提供技術服務。比照 AIT 與外交部合辦的「『智』同道合–數位對話」系列，透過 pol.is 系統建構對話平台（網址：[tca.talksto.tw](https://tca.talkto.tw)），讓對此議題有興趣的參與者，都能發表意見、集思廣益。
+💡 我的辦公室（行政院公共數位創新空間，PDIS）也受邀為 TCA 舉辦的線上公眾諮詢提供技術服務。比照 AIT 與外交部合辦的「『智』同道合–數位對話」系列，透過 pol.is 系統建構對話平台（📲網址： [tca.talksto.tw](https://tca.talkto.tw) ），讓對此議題有興趣的參與者，都能發表意見、集思廣益。
 
 🔄 人才外流，被不少人視為嚴肅的國家問題。然而，以台積電創辦人張忠謀為例，我們可以發現，只要有好的環境與制度，人才不會只單向流動，而是循環對流。
 
