--- a/_i18n/zh-TW/_posts/2019-12-02-打造對同伴動物更友善的台鐵.md
+++ b/_i18n/zh-TW/_posts/2019-12-02-打造對同伴動物更友善的台鐵.md
@@ -2,7 +2,7 @@
 layout: post
 title: 蘋果專欄：打造對同伴動物更友善的台鐵
 excerpt: 台鐵決定採納會議共識，進行三個月的試辦，將寵物箱籠的尺寸限制放寬。
-image: https://talk.pdis.nat.gov.tw/uploads/default/original/2X/d/d2d9c7bf3088d67c5150e2e658a5dcae2f3a6e66.png
+image: https://talk.pdis.nat.gov.tw/uploads/default/original/2X/8/85e2d3ea857fa9f8f79910c37b73e080c02f4136.jpeg
 author: 唐鳳、黃子維
 category: blog
 tags:
