--- a/_i18n/en/_posts/2019-12-02-打造對同伴動物更友善的台鐵.md
+++ b/_i18n/en/_posts/2019-12-02-打造對同伴動物更友善的台鐵.md
@@ -1,23 +1,22 @@
 ---
   layout: "post"
-  title: "Apple Column: Creating a Taiwan Railway Friendly to Companion Animals"
+  title: "Make railways more friendly to companion animals"
   excerpt: "The Taiwan Railways decided to adopt the consensus of the meeting and conduct a three-month trial to relax the size restrictions of pet cages."
-  image: "https://talk.pdis.nat.gov.tw/uploads/default/original/2X/d/d2d9c7bf3088d67c5150e2e658a5dcae2f3a6e66.png"
-  author: "唐鳳、黃子維"
+  image: "https://talk.pdis.nat.gov.tw/uploads/default/original/2X/8/85e2d3ea857fa9f8f79910c37b73e080c02f4136.jpeg"
+  author: "Audrey Tang, Zach Huang"
   category: "blog"
   tags: 
-    - "開放政府"
+    - "Open Government"
 ---
 
-
- 🐶 In August of this year, "Travel of Rice Xiaomi Travels" proposed a "Pet (Cat / Dog) Rail Public Transport" Pet Friendly Car "Regulations and Specific Measures" on the public policy network participation platform, hoping that the Ministry of Communications Taiwan The Railway Authority can relax the "Article 46 of the Passenger Transport Contract" so that large and medium-sized cats and dogs can also ride with their owners. This is also the second time the netizen "Mi Da" has proposed on the platform. 
+🐶 In August of this year, the blog "Travel of Rice" proposed "Pet-friendly cars on rails: Specification and specific measures" on the Join.gov.tw participation platform, asking the Taiwan Railway Administration (TRA) of the Ministry of Transport to relax the "Article 46 of the Passenger Transport Contract" so that large and medium-sized cats and dogs can also ride with their owners. This is also the second time the blogger "Mi Da" has made a proposal on the platform.
  
- In the face of this matter, in the state where the Taiwan Railway has not yet received 5000 co-signatures and has not yet completed the case, it has adopted the "Open Government Contact Person" of the Ministry of Transport and At the "regular meeting", he actively proposed that a collaborative meeting should be held for this case. This courageous attitude and willingness to discuss the solution face-to-face with netizens is highly appreciated. 
+🚆 Even before the proposal received 5,000 joint signatures, Taiwan Railways proactively raised this issue through Ministry of Transport's "Participation Officers Network", at the inter-ministerial meeting of "Monthly Participation Officer Meetings", proposing to organize collaborative meetings for this case. This courageous attitude and willingness to discuss the solution face-to-face with netizens is highly appreciated.
  
- 🚃 According to Article 46 of the Passenger Transport Contract of the Taiwan Railway: In addition to guide dogs such as guide dogs and deaf dogs, pets must be installed in the length, width and height of the Taiwan Railway along with their owners. In pet boxes, bags within 43, 32 and 31 cm, they are well packed and placed under the seat. On the one hand, such a size limitation will inevitably cause difficulties for larger pets, and some owners will be timid. However, on the other hand, the space and conditions for pets on the train must not be without standards, otherwise it may crowd other passengers and affect the operation of the Taiwan Railway. 
+🚃 According to Article 46 of the Passenger Transport Contract of the Taiwan Railway, except for guide dogs such as guide dogs and deaf dogs, If pets are to board the railway with their owners, they must be packed in pet boxes and bags with a length, width, and height of 43, 32, and 31 cm, respectively, and must be packed and placed under the seat. On the one hand, such a size limitation will inevitably cause difficulties for larger pets and will make some owners feel timid. However, on the other hand, the space and conditions for pets on the train must not be without standards, otherwise, it may crowd other passengers and affect the operation of the Taiwan Railway.
  
- 🎨 In order to make the collaborative meeting more focused, and at the same time to find a solution that is acceptable to all parties and concrete and feasible, my office (PDIS of the Executive Yuan) and colleagues of the Taiwan Railways carried out before the collaborative meeting A series of stakeholder interviews. In addition to pet owners and general passengers, a number of train captains and station attendants are also included to understand the experience and feelings of frontline staff. On the day of the collaboration meeting, we also invited a number of seconders of the case and veterinarians to participate in the discussion to ensure the diversity and equity of opinions. 
+🎨 In order to make the collaborative meeting more focused, and at the same time to find a solution that is acceptable to all parties and concrete and feasible, my office (Public Digital Innovation Space, PDIS) and colleagues of the Taiwan Railways carried out a series of stakeholder meetings before the collaborative meetings. In addition to pet owners and general passengers, a number of train captains and station attendants are also included to understand the experience and feelings of frontline staff. On the day of the collaboration meeting, we also invited a number of seconders of the case and veterinarians to participate in the discussion to ensure the diversity and equity of opinions.
  
- ✅ Today, it is very gratifying that just one month after the collaboration meeting ended, the Taiwan Railway decided to adopt the consensus of the meeting and conduct a three-month trial from December 1st. Cage length, width, and height restrictions are relaxed to 55, 43 and 38 cm, allowing more owners of medium and large pets to choose an additional means of transportation, while reducing the standards for different transfers between Taiwan Railway and different vehicles Inconvenience. 
+✅ Today, it's great to know that just over a month after the coordination meeting, the Taiwan Railways decided to adopt the consensus of the meeting and conduct a three-month trial since December. Compared with the high-speed rail, the size restrictions for the length, width, and height of pet cages were relaxed to 55, 43, and 38 cm. This allows more owners of medium and large pets to choose one more means of transportation and reduce the inconvenience caused by different standards when transferring between the Taiwan Railway and different vehicles.
  
- 🚄 Finally, in addition to wishing the trial a complete success, I also want to thank all the participants and Minister Lin Jialong for their interest in this matter. I hope there will be more opportunities for collaboration in the future, let us work together to create a Taiwan Railway that is more friendly to companion animals. 
+🚄 Finally, in addition to wishing the trial a complete success, I also want to thank all the participants and Minister Lin Chia-lung for their contributions in this matter. I hope there will be more opportunities for collaboration in the future, let us work together to make Taiwan Railways more friendly to companion animals.
