--- a/_i18n/en/_posts/2019-12-08-運用社會創新，成就更好的世界.md
+++ b/_i18n/en/_posts/2019-12-08-運用社會創新，成就更好的世界.md
@@ -1,63 +1,64 @@
 ---
   layout: "post"
-  title: "Use social innovation to achieve a better world"
-  excerpt: "From buddies to partnerships, this has been a major shift in government's public policy in recent years."
+  title: "Social innovation for a better world"
+  excerpt: "Switching from assistants to partners has been a major shift in the government's public policy in recent years."
   image: "https://talk.pdis.nat.gov.tw/uploads/default/original/2X/3/389c86bb31c3831eb2924187e65709c96ac95d2c.jpeg"
-  author: "唐鳳、彭筱婷"
+  author: "Audrey Tang, Sheau-Tyng Peng"
   category: "blog"
   tags: 
-    - "社會創新"
+    - "Social Innovation"
 ---
 
+"Social innovation" has become a worldwide trend in recent years, leading to countless conscious and spontaneous movements from citizens. In a nutshell, social innovation is "everyone's problem, everyone helps": Everyone uses innovative methods to spontaneously invest and participate in things that contribute to the world, and then change the relationship between different groups in society and find solutions for the common problems.
 
- In recent years, "social innovation" has become a worldwide trend, and countless citizens have formed a voluntary movement. In a nutshell, social innovation is "things for everyone, everyone helps": Everyone uses innovative methods to spontaneously invest and participate in things that contribute to the world, and then change the relationship between different groups in society and find solutions to common problems. The problem approach. 
+This cross-departmental collaboration not only blurs the boundary between society and business, which transforms the thinking of non-profit organizations, but also allows organizations with different missions to exist in various forms. How to assist the organizers who have worked hard on their own to become a symbiotic ecosystem is my goal as the Digital Minister.
 
- This cross-departmental collaboration not only blurs the boundary between society and business, transforms the thinking of non-profit organizations, and allows many organizations with different missions to exist in various forms. How to assist the organizers who have worked hard to become a symbiotic ecosystem is my goal after working as a political commissioner. 
+The Executive Yuan has a total of 32 ministries, each with a different mission. Except for the Central Bank, it can be considered as 31 non-profit organizations (NPOs). Social innovation covers a wide range of levels and involves a large number of stakeholders. A single ministry is often limited by planning schedules and budget constraints. If the administrative department decides on the development strategy alone and then hands it to the social sector for implementation, the latter is a subordinating "assistant," which is difficult to effectively reflect the trend of the new era or provide the most appropriate solution. On the other hand, if social innovation is initiated by the social sector and government agencies become "partners" in collaboration, this system is not only more flexible but also more effective in grasping the problem.
 
- The Executive Yuan has 32 ministries and commissions, each with a different mission. Except for the Central Bank, it can be considered as 31 non-profit organizations (NPOs). The field of social innovation covers a wide range of levels and involves a large number of stakeholders. A single ministry is often limited by planning schedules and budget constraints. If the administrative department decides the development strategy separately and then hands it over to the social sector for implementation, it will become an upward trend. The "buddy" relationship under it is difficult to effectively reflect the new era trend and provide the most appropriate solution. On the other hand, if social innovation is initiated by the social sector and government agencies become "partners" in collaboration, it is not only more flexible, but also more effective in grasping problem. 
+Switching from assistants to partners has been a major shift in the government's public policy in recent years.
 
- From a buddy relationship to a partnership, this is a major change in the government's public policy in recent years. 
+### Partnership in Taiwan
 
- ### Partnerships in Taiwan 
+In 2014, the government launched a three-year "Social Enterprise Action Plan," an important step in ecosystem construction. The Sustainable Development Goals (SDGs), which began in 2015, have made social innovation the common language of the world. At that time, the United Nations Development Summit released the “2030 Sustainable Development Policy,” which proposed 17 sustainable development goals, including 169 specific projects, as the global vision for 2030.
 
- In 2014, the government launched a three-year "Social Enterprise Action Plan", an important step for ecosystem construction. Sustainable Development Goals (SDGs), which began in 2015, have made social innovation the official language of the world. At that time, the United Nations Development Summit released the “2030 Sustainable Development Policy”, which proposed 17 sustainable development goals, including 169 specific projects, as the global vision for 2030. The emergence of 
+With the advent of SDGs, friends who had worked hard alone started to see each other again. Regardless of environmental work, social work, or economic work, as long as the spirit of sustainable development is entertained, all work is like a puzzle and can be put together. For a shared mission, it is easier for people from different fields to come together and exert more power.
 
- SDGs made friends who had worked hard to see each other again. Regardless of environmental work, social work or economic work, as long as the spirit of sustainable development is maintained, all work is like a puzzle and can be put together. Through a common mission, it is easier for people in different fields to come together and exert more power. 
+Therefore, in 2018, we launched the "Social Innovation Action Plan" promoted by various ministries. Different from the previous attempts, the Plan includes social sectors such as social enterprises and non-profit organizations. As long as there is a clear social mission and innovation model, any type of organization can become a "social innovation organization," and partner with various ministries to assist each other.
 
- Therefore, in 2018, we launched the "Social Innovation Action Plan" which will be promoted by various ministries. Different from the previous, the social innovation action plan includes social sectors such as social enterprises and non-profit organizations. As long as there is a clear social mission and innovation model, any type of organization can become a "social innovation organization", and partners with various ministries and partners The positions assist each other. 
+### Three links in social innovation
 
- ### Three links link social innovation 
+Based on this concept, the "Social Innovation Platform" was officially established this year. On the Platform, anyone can see the current status of the 400 social innovation organizations across Taiwan and the ongoing development goals. As the partnership progresses, the main axis of the current "Social Innovation Action Plan" is gradually being shaped, which can be summarized as "three links."
 
- Based on this concept, the "Social Innovation Platform" was officially established this year. On the platform, anyone can see the current status of the 400 social innovation organizations across Taiwan and the ongoing development goals. As the partnership progresses, the main axis of the current "Social Innovation Action Plan" has gradually been shaped, which can be summarized as the "three links." 
+#### The first link is the link between "Society" and "Business."
 
- #### The first link is the link between "Society" and "Business". 
+From public fundraising to block chain, the social sector has broken through the linear development of traditional enterprises. At the same time, whether it is circular economy or green energy and other industrial innovations, everyone needs to get involved, and all parties need each other's innovations. In this process, the government plays a role in helping both sides focus. Therefore, I travel around Taiwan to meet and talk with local social innovation organizations on a regular basis, so that issues in the social sector can be responded to promptly, and that government departments can also be aware of the energy of innovation in the social sector.
 
- From the crowdfunding to the blockchain, the social sector has broken through the linear development of traditional enterprises. At the same time, whether it is circular economy or green energy and other industrial innovations, everyone needs to invest together, and both sides need innovation from each other. In this process, the government plays a role in helping both parties focus. Therefore, I travel to Taiwan to meet with local social innovation organizations on a regular basis, so that issues in the social sector can be responded to immediately, and government departments are also aware of the energy of innovation in the social sector. 
+In addition, through the social innovation platform, anyone can come to the social innovation experiment center to talk with me for up to 40 minutes. In March last year, the “Excellent Care Platform,” which provides short-term home care for the matches, put forward the concept of “time coin” in the Social Innovation Center. Thus, volunteers can store their contributions and love for future use when needed. In addition to assisting in confirming the responsible business unit, I also provide the "Platform Economic Development Regulations Adaptation Reference Principles" as a development basis for the suggestion. This year, they have established the form of B2B cloud services and decided to set up a company with a mission of public benefit.
 
- In addition, through the social innovation platform, anyone can come to the Social Innovation Experiment Center and come to me to discuss for 40 minutes. In March last year, the “Excellent Care Platform”, which provides short-term home care for the matchmaking, put forward the concept of “time coin” in the Social Innovation Center, so that volunteers can store their contributions and love, and can use them when needed in the future. In addition to assisting in confirming the responsible business unit, I also provided the "Platform Economic Development Regulations Adaptation Reference Principles" as a suggested development basis. This year, they have established a form of B2B cloud services and decided to set up a company with a mission of public benefit. 
+In response to the rapid development of cross-departmental and cross-organizational entities, regulations must also keep pace with the times. Based on the spirit of "innovation regulations sandbox platform," we allow those who innovate to be free from laws and regulations within a certain period of time, to experiment all they want, and to promote law and other administrative plans after things get focused.
 
- In response to the rapid development of cross-departmental and cross-organizational models, regulations must also keep pace with the times. We use the spirit of the "innovation and regulations sandbox platform" to allow those who invest in innovation to be free from regulations and experiment in a certain period of time. After focusing, we can promote laws or other administrative plans. 
+For example, last year, we completed a demonstration case of a corporate legal person setting up a closely held corporation. This year, we have also added a "Protection Clause for the Rights and Interests of Cooperative Members" in the labor procurement contract. These measures not only move the barriers for the folk people, but can also promote government departments to drive legal innovation through social innovation.
 
- For example, last year we have completed a demonstration case of a corporate legal person setting up a closed company. This year, we also added a "Protection Clause for the Rights and Interests of Cooperative Members" in the labor procurement contract. These measures not only move the stones for the folk friends, but also can promote government departments to promote legal innovation through social innovation. 
+#### The second link is the link between "mission" and "organization."
 
- #### The second link is the link between Mission and Organization. 
+From the perspective of the social innovation organization, as the organization may expand in the future, the mission will inevitably turn around. Conversely, to promote a mission, it may be appropriate to use this organizational type now and switch to another in the future. An example is the transformation of Good Sheperd Associations into a closely held corporation.
 
- From the perspective of the social innovation organization, as the organization may expand in the future, the mission will inevitably turn around. Conversely, promoting a mission may be suitable for this organization type now, and later adjusted to another organization type One example is the transformation of the Good Shepherd Association into a closed company. 
+In the journey of social innovation, whether it is promoting the mission or operating the organization, it is often part of achieving the 17 global sustainable development goals. How can abstract missions be mapped onto specific indicators? This is called accountability in the public sector and, in the parlance of the social sector, "giving an explanation." The internal explanation is given to employees, stakeholders, and acquaintances, which aims at the cohesion of the organization. The external explanation is to spread the mission so that more friends can continue the idea and carry it further on.
 
- In the journey of social innovation, whether it is to promote a mission or operate an organization, it is often to achieve part of the 17 global sustainable development goals. How to map abstract missions to specific indicators? This is called accountability in the public sector and, in the parlance of the social sector, it is "giving accountability." The internal explanation is to employees, stakeholders, and people who know each other. The focus is on cohesion of the organization. The diplomatic mission is to spread the mission so that more friends can continue the idea and carry forward it. 
+Therefore, we now encourage social innovation organizations, be they for-profit, non-profit, or cooperative, who have registered on the social innovation platform, to disclose their purposes, constitutions, and public welfare reports. In this way, whether it is the continuation of the organization or the sustainability of the mission, it can be guaranteed through the culture of "public accountability."
 
- So now we encourage social innovation organizations, whether for-profit, non-profit organizations, or cooperatives, that are registered on the social innovation platform, to disclose their purpose, charter and public welfare report. In this way, whether it is the continuation of the organization or the sustainability of the mission, it can be guaranteed through a culture such as "public accountability." 
+#### The third link is the link between "Sustainability" and "Transformation."
 
- #### The third link is the link between Persistence and Transformation. 
+"Transformation" happens in various aspects, such as the baton between generations—how to invite the youth to set the direction, and then the elders to use their wisdom to ensure its feasibility. When talking about digital transformation, many people think of getting paperless and electronic. In fact, the significance of digital transformation is to use digital methods to do something with other people first, and then recognize each other, so as to establish a collaborative relationship.
 
- "Transformation" includes various aspects, such as the baton between generations, how to invite young people to set the direction, and then the elders to use their wisdom to ensure that it is feasible; when it comes to digital transformation, many people think of paperless and electronic . In fact, the significance of digital transformation is to use digital methods to do something with other people first, and then recognize each other, so as to establish a collaborative relationship. Looking at the world, no matter what kind of transformation, if it is confined to a single field, it often lacks social cohesion, and it is difficult to really improve the overall development. The value of Taiwan is that friends from all walks of life who are engaged in social innovation are thinking about the common interests of the next generation and the next two generations. Upholding the spirit of "sustainability," our generation, whether committed to economic, environmental, or social transformation, the real beneficiaries will be future generations. 
+In the whole world, no matter what kind of transformation, if it is confined to a single field, it often lacks social cohesion, and can hardly significantly improve the overall development. The value of Taiwan is that friends from all walks of life who are engaged in social innovation are thinking about the common interests of the next generation and the next two generations. Upholding the spirit of "sustainability," this generation, whether committed to economic, environmental, or social transformation, recognizes the real beneficiaries will be our future generations.
 
- ### Looking at the Earth from a Telescope 
+### Looking at the earth with a telescope
 
- In August this year, the NASA announced that the James Webb Space Telescope was officially assembled and will be launched on the second Lagrange on the Sun and Earth extension in 2021. Point, in the future, you can maintain a relatively stable distance from the earth without using special power. 
+In August of this year, NASA announced that the James Webb Space Telescope was officially assembled. It will be launched to the second Lagrangian point on the extension line of the sun and the earth in 2021. In the future, no special power will be required to maintain its relatively stable distance with the earth.
 
- No matter where on the surface of the earth we are, our vision is always limited and we cannot see the other side. But from space, observing the rotation of the earth through a telescope, we may really think about the whole picture. 
+No matter where we are on the earth's surface, our vision is always limited and we cannot see its other side. But from space, observing the rotation of the earth through a telescope, we may really think about the whole picture.
 
- For me, this telescope symbolizes all friends who are engaged in social innovation. The main lens on the James Webb Space Telescope is a splicing of 18 hexagonal lenses, just like each of us is a part of society. At first we got together and then we went our separate ways, but we still can Use puzzles to work together to build a vision for the future. 
+To me, this telescope symbolizes all friends who are engaged in social innovation. The main lens on the James Webb Space Telescope is a splicing of 18 hexagonal lenses, just like each of us as a part of society. At first we get together and then we go our own ways, but we can still be like a puzzle to work together to build a vision for the future.
 
- I look forward to more people joining the ranks of jigsaw puzzles in the future, looking at the earth from space, and using social innovation together to achieve a better world. 
+I look forward to more people joining the puzzle in the future, looking at the earth from space, and using social innovation together to achieve a better world.
