--- a/_i18n/en/_posts/2019-12-08-運用社會創新，成就更好的世界.md
+++ b/_i18n/en/_posts/2019-12-08-運用社會創新，成就更好的世界.md
@@ -33,7 +33,7 @@ Based on this concept, the "Social Innovation Platform" was officially establish
 
 From public fundraising to block chain, the social sector has broken through the linear development of traditional enterprises. At the same time, whether it is circular economy or green energy and other industrial innovations, everyone needs to get involved, and all parties need each other's innovations. In this process, the government plays a role in helping both sides focus. Therefore, I travel around Taiwan to meet and talk with local social innovation organizations on a regular basis, so that issues in the social sector can be responded to promptly, and that government departments can also be aware of the energy of innovation in the social sector.
 
-In addition, through the social innovation platform, anyone can come to the social innovation experiment center to talk with me for up to 40 minutes. In March last year, the “Excellent Care Platform,” which provides short-term home care for the matches, put forward the concept of “time coin” in the Social Innovation Center. Thus, volunteers can store their contributions and love for future use when needed. In addition to assisting in confirming the responsible business unit, I also provide the "Platform Economic Development Regulations Adaptation Reference Principles" as a development basis for the suggestion. This year, they have established the form of B2B cloud services and decided to set up a company with a mission of public benefit.
+In addition, through the social innovation platform, anyone can come to the social innovation experiment center to talk with me for up to 40 minutes. In March last year, the “Ucarer Platform,” which provides short-term home care for the matches, put forward the concept of “time coin” in the Social Innovation Center. Thus, volunteers can store their contributions and love for future use when needed. In addition to assisting in confirming the responsible business unit, I also provide the "Platform Economic Development Regulations Adaptation Reference Principles" as a development basis for the suggestion. This year, they have established the form of B2B cloud services and decided to set up a company with a mission of public benefit.
 
 In response to the rapid development of cross-departmental and cross-organizational entities, regulations must also keep pace with the times. Based on the spirit of "innovation regulations sandbox platform," we allow those who innovate to be free from laws and regulations within a certain period of time, to experiment all they want, and to promote law and other administrative plans after things get focused.
 
