--- a/_i18n/en/_posts/2019-12-12-商周專欄-全民協力-選賢與能.md
+++ b/_i18n/en/_posts/2019-12-12-商周專欄-全民協力-選賢與能.md
@@ -1,25 +1,24 @@
 ---
   layout: "post"
-  title: "Business Week Column: Working Together for the People"
-  excerpt: "\"The more multimedia people are willing to cooperate, the more chances they have to complete this puzzle.\""
+  title: "Collaborating for Democracy"
+  excerpt: "“The more media are willing to collaborate, the more likely it will be to complete the whole collage.”"
   image: "https://talk.pdis.nat.gov.tw/uploads/default/original/2X/7/7174287ad0e4063fdb6b84ac8882406c3c6805be.jpeg"
-  author: "唐鳳、彭筱婷"
+  author: "Audrey Tang, Sheau-Tyng Peng"
   category: "blog"
   tags: 
-    - "社會創新"
+    - "Social Innovation"
 ---
 
+🔝 As the election approaches and the relevant discussions become more heated, the topic of disinformation has become the focus once again. This April, the transnational political science research project Varieties of Democracy (V-Dem) released the latest annual database, which pointed out that the degree of attack to Taiwan by overseas actors in 2018 was "No. 1 in the world," highlighting this this issue as one of our most imminent challenges.
 
- 🔝 As the election approaches, related discussions are getting more and more heated, and the topic of "disinformation" has once again become the focus. In April of this year, the Varieties of Democracy (V-Dem), a political science transnational survey project, released the latest annual database, stating that Taiwan ’s attack on overseas fake information in 2018 was “the world ’s first”, and it can be said that it is becoming imminent for us. test. 
+✍️ How can we tackle such a complex issue? In December 2018, the Executive Yuan issued "A Special Report on the Preventing and Countering Disinformation," committing to provide real-time clarifications on government-related issues. More importantly, the government encouraged major social media platforms to sign the "Self-Regulation and Best Practices for Disinformation Prevention and Control."
 
- ✍️ How do I answer this question? In December 2018, the Executive Yuan released the "Project Report on Preventing the Harm of Fake Information". In addition to starting from itself, the government has clarified rumors in a timely manner, and more importantly, encourages major social platforms to sign "Practical Guidelines for Self-Regulatory Practices of Prevention of False Information ". 
+🔢 For example, LINE launched a [Digital Accountability Dashboard](https://fact-checker.line.me/) this year. In collaboration with four organizations, among which was the g0v grant winner — the "Cofacts" project — LINE they set up an official account to allow the public to report disinformation, which are sent to collaborating organization will provide clarified information. At present, more than 140,000 rumors have reported there, and the total number of unique messages has exceeded 30,000.
 
- 🔢 For example, LINE launched “[Digital Accountability Project](https://fact-checker.line.me/)” this year, and the g0v Citizen Technology Innovation Award grant team “really "Fake Cofacts." At present, there are more than 140,000 reports and more than 30,000 reports. 
+🤹 At the same time, the civil society volunteered themselves into the mission of preventing the harm of disinformation. In May 2019, the [2020 President Candidate Fact Checking Project](https://www.readr.tw/project/fact-check-2020) was born in Hackathon run by the civic tech community "g0v" (gov-zero) in Taipei.
 
- 🤹 At the same time, many friends have also spontaneously invested in the ranks of preventing the harm of fake information. In May 2019, "[2020 Presidential Candidate Fact Check Plan](https://www.readr.tw/project/fact-check-2020)" was held in taipei at the zero-hour government (g0v) of the citizen technology community. The hacker Matsunaka hosted by President Kong was born. 
+🧩 This large-scale planning, which involves news media, web platforms, and civilian communities, originates from the Internet platform Readr. The team founder H.C. Chien, also a long-time participant in the public community, got this idea when he took part in the Hackathon, "The more media are willing to collaborate, the more likely it will be to complete the whole collage." Then, he began to reach out across various communities in the Hackathon, which led to the involvement of many media platforms and citizen communities, such as the PTS "P# News Lab" and "Watchout".
 
- 🧩 This large-scale collaborative project that includes news media, online platforms, and civic communities originates from the idea of the online platform Readr team. Jian Xinchang, the team's initiator and also a senior community participant, thought at the time of participating in the hackathon: "The more the multimedia is willing to cooperate, the more chance it will be to complete the whole puzzle." So he began to inquire about the hackathon. The willingness of the local media and the community has contributed to the investment of public television P # news labs, media platforms such as Wo Cao and the citizen community. 
+🚧 There are several steps in this plan: first, find out a candidate's public speech video, allow the netizens to transcribe it verbatim, which will then be verified, sorted, and then submitted to the news media to verify the content. At present, 14 media and cooperative units and nearly 1,000 netizens have joined the team of verbatim transcribing and fact checking. The verification is currently in full swing.
 
- 🚧 This plan has several steps: first, find out the candidate's public speech video, open the netizens to make verbatim, verify, classify, and then check the content with the news media. At present, 14 media and cooperative units and nearly 1,000 netizens have joined the ranks of verbatim manuscripts and checking facts. The verification operation is still in full swing. 
-
- 🗽 Many friends worry that fake information will mislead people to judge and change election results. In my opinion, the biggest harm of false information is actually destroying people's imagination of democracy, leading everyone to feel that democracy cannot let each other listen, let alone reach consensus. Whether it is the "LINE Information Verification" platform or the "2020 Presidential Candidate Fact Check Plan", it not only reflects the social creation spirit of "people's affairs, help from others", but also deepens democratic literacy through participation. 
+🗽 Many people are worried that disinformation will mislead the public and change the results of the election. In my opinion, the greatest harm of disinformation lies in ruining people's understanding of democracy, leading us to feel that democracy makes it impossible for us to listen to each other, letting alone achieving consensus. No matter whether it is the "LINE Information Verification," or the "2020 President Candidate Fact Checking Plan," they embody the social spirit of "everyone's matter, everyone helps," deepening our democracy through civic participation.
